# eternal_task

./: README.txt
omni_bot/: CMakeLists.txt  input.txt  output.txt  package.xml
omni_bot/config/: bot_params.yaml
omni_bot/include/: controlNode.h  readNode.h
omni_bot/launch/: omni_bot.launch
omni_bot/msg/: sensorMsg.msg
omni_bot/src/: controlNode.cpp  controller.cpp  readNode.cpp  reader.cpp
